<resources>
    <string name="app_name">Score Keeper</string>
    <string name="action_settings">Settings</string>
    <string name="alcohol">Alcohol</string>
    <string name="soft_drinks">Water</string>
    <string name="input">input</string>
    <string name="needed">needed</string>
    <string name="strong">Strong (cl)</string>
    <string name="weak">Weak (dl)</string>
    <string name="water">Water (dl)</string>
    <string name="soft_drink">Soda (dl)</string>
    <string name="reset">reset</string>
    <string name="alcohol_a_number">0</string>
    <string name="soft_drinks_a_number">0</string>
    <string name="equals">=</string>
    <string name="question"></string>
    <string name="startQuiz">Start quiz</string>
    <string name="submitAnswer">Submit answer</string>

    <string name="operation1">1+8=</string>
    <string name="operation2">16+22=</string>
    <string name="operation3">17+19=</string>
    <string name="operation4">101&#8211;44=</string>
    <string name="operation5">215&#8211;14+1=</string>

    <string name="op1correct">9</string>
    <string name="op2correct">38</string>
    <string name="op3correct">36</string>
    <string name="op4correct">57</string>
    <string name="op5correct">202</string>

    <string name="toastDrunk">Go home friend, you\'re drunk!</string>
    <string name="toastSober">Well, you\'ve drunk a lot but you can still count!</string>
    <string name="GoHomeMessage">Go home and sleep : )</string>
    <string name="empty"></string>

    <string name="toastAddForAlcohol_0">Goody, start nice &amp; easy!</string>
    <string name="toastAddForAlcohol_1">Oho! It must be Friday!</string>
    <string name="toastAddForAlcohol_2">That\'s the spirit! Literally&#8230;</string>
    <string name="toastAddForAlcohol_3">You\'re still okay&#8230; kinda.</string>
    <string name="toastAddForAlcohol_4">Drown your sorrow in juice instead!</string>
    <string name="toastAddForAlcohol_5">Non-alcoholics were a better idea!</string>
    <string name="toastAddForAlcohol_6">Turn on the water, please!</string>
    <string name="toastAddForAlcohol_7">More water, sailor!</string>
    <string name="toastAddForAlcohol_8">Do you want to die?</string>
    <string name="toastAddForAlcohol_9">You must have a death wish!</string>

    <string name="toastSubtractForSoftDrink_1">Phew! Finally!</string>
    <string name="toastSubtractForSoftDrink_2">About damn time!</string>
    <string name="toastSubtractForSoftDrink_3">You\'re still not driving home!</string>
    <string name="toastSubtractForSoftDrink_4">Good job! Some more of this?</string>
    <string name="toastSubtractForSoftDrink_5">More of this &amp; less of that spirit!</string>
    <string name="toastSubtractForSoftDrink_6">No hangover, no cry!</string>
    <string name="toastSubtractForSoftDrink_7">Yes, you\'ll live tomorrow!</string>
    <string name="toastSubtractForSoftDrink_8">With great power comes great responsibility.</string>
    <string name="toastSubtractForSoftDrink_9">Not judging you. Honest.</string>
</resources>
