<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGrey">

    <LinearLayout
        android:id="@+id/horizontal_LinLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorGrey"
        android:orientation="horizontal">

        <!-- The "Water droplets on glass" background image was created by
        George Becket at www.pexels.com, and modified with coloured tints
        using www141.lunapic.com-->

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/alc_blurred_y"
            android:orientation="vertical"
            tools:context=".MainActivity">

            <TextView
                style="@style/WaterAlcCaptions"
                android:text="@string/alcohol" />

            <TextView
                style="@style/WaterAlcLowCaptions"
                android:text="@string/input" />

            <TextView
                android:id="@+id/alcohol_score"
                style="@style/CounterNumber"
                android:text="@string/alcohol_a_number" />

            <Button
                style="@style/UpperButton"
                android:background="@drawable/mybutton2"
                android:onClick="addThreeForAlcohol"
                android:text="@string/strong" />

            <ImageButton
                style="@style/UndoButton"
                android:onClick="subtractThreeForAlcohol" />

            <Button
                style="@style/UpperButton"
                android:background="@drawable/mybutton2"
                android:onClick="addOneForAlcohol"
                android:text="@string/weak" />

            <ImageButton
                style="@style/UndoButton"
                android:onClick="subtractOneForAlcohol" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/bubbles_blurred_y_r_white"
            android:orientation="vertical"
            tools:context=".MainActivity">

            <TextView
                style="@style/WaterAlcCaptions"
                android:text="@string/soft_drinks" />

            <TextView
                style="@style/WaterAlcLowCaptions"
                android:text="@string/needed" />

            <TextView
                android:id="@+id/soft_drink_score"
                style="@style/CounterNumber"
                android:text="@string/soft_drinks_a_number" />

            <Button
                style="@style/UpperButton"
                android:background="@drawable/mybutton"
                android:onClick="subtractTwoForSoftDrink"
                android:text="@string/water" />

            <ImageButton
                style="@style/UndoButton"
                android:onClick="addTwoForSoftDrink" />

            <Button
                style="@style/UpperButton"
                android:background="@drawable/mybutton"
                android:onClick="subtractOneForSoftDrink"
                android:text="@string/soft_drink" />

            <ImageButton
                style="@style/UndoButton"
                android:onClick="addOneForSoftDrink" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/paddingOrMar_XXL"
        android:background="@drawable/mybutton3"
        android:onClick="resetScore"
        android:text="@string/reset"
        android:textAllCaps="true"
        android:textSize="@dimen/textSize_M" />

</RelativeLayout>